@@ -62,28 +62,19 @@ static void adc2_start (void)
   rccEnableAPB2 (RCC_APB2ENR_ADC2EN, FALSE);
 
   ADC2->CR1 = ADC_CR1_DUALMOD_2 | ADC_CR1_DUALMOD_1 | ADC_CR1_DUALMOD_0;
-  ADC2->CR2 = ADC_CR2_EXTTRIG | ADC_CR2_EXTSEL | ADC_CR2_CONT | ADC_CR2_ADON;
-#ifdef NEUG_NON_DEFAULT_ADC_CHANNEL
-  ADC2->SMPR1 = 0;
-  ADC2->SMPR2 = ADC_SMPR2_SMP_ANx_B(ADC_SAMPLE_1P5);
-#else
-  ADC2->SMPR1 = ADC_SMPR1_SMP_AN11(ADC_SAMPLE_1P5);
-  ADC2->SMPR2 = 0;
-#endif
-  ADC2->SQR1 = ADC_SQR1_NUM_CH(ADC_GRP1_NUM_CHANNELS);
+  ADC2->CR2 = ADC_CR2_EXTTRIG | ADC_CR2_CONT | ADC_CR2_ADON;
+  ADC2->SMPR1 = NEUG_ADC_SETTING2_SMPR1;
+  ADC2->SMPR2 = NEUG_ADC_SETTING2_SMPR2;
+  ADC2->SQR1 = ADC_SQR1_NUM_CH(NEUG_ADC_SETTING2_NUM_CHANNELS);
   ADC2->SQR2 = 0;
-#ifdef NEUG_NON_DEFAULT_ADC_CHANNEL
-  ADC2->SQR3 = ADC_SQR3_SQ1_N(NEUG_ADC_CHANNEL_B);
-#else
-  ADC2->SQR3 = ADC_SQR3_SQ1_N(ADC_CHANNEL_IN11);
-#endif
+  ADC2->SQR3 = NEUG_ADC_SETTING2_SQR3;
 
   chSysUnlock ();
 }
 
 static void adc2_start_conversion (void)
 {
-  ADC2->CR2 = ADC_CR2_EXTTRIG | ADC_CR2_EXTSEL | ADC_CR2_CONT | ADC_CR2_ADON;
+  ADC2->CR2 = ADC_CR2_EXTTRIG | ADC_CR2_CONT | ADC_CR2_ADON;
 }
 
 void adc2_stop_conversion (void)
@@ -121,21 +112,12 @@ static const ADCConversionGroup adcgrpcfg = {
   adccb,
   adccb_err,
   ADC_CR1_DUALMOD_2 | ADC_CR1_DUALMOD_1 | ADC_CR1_DUALMOD_0,
-  ADC_CR2_EXTTRIG | ADC_CR2_SWSTART | ADC_CR2_EXTSEL,
-#ifdef NEUG_NON_DEFAULT_ADC_CHANNEL
+  ADC_CR2_TSVREFE | ADC_CR2_EXTTRIG | ADC_CR2_SWSTART | ADC_CR2_EXTSEL,
+  NEUG_ADC_SETTING1_SMPR1,
+  NEUG_ADC_SETTING1_SMPR2,
+  ADC_SQR1_NUM_CH(NEUG_ADC_SETTING1_NUM_CHANNELS),
   0,
-  ADC_SMPR2_SMP_ANx_A(ADC_SAMPLE_1P5),
-#else
-  ADC_SMPR1_SMP_AN10(ADC_SAMPLE_1P5),
-  0,
-#endif
-  ADC_SQR1_NUM_CH(ADC_GRP1_NUM_CHANNELS),
-  0,
-#if NEUG_NON_DEFAULT_ADC_CHANNEL
-  ADC_SQR3_SQ1_N(NEUG_ADC_CHANNEL_A)
-#else
-  ADC_SQR3_SQ1_N(ADC_CHANNEL_IN10)
-#endif
+  NEUG_ADC_SETTING1_SQR3
 };
 
 /*
